Changed image extensions

--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
            <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
 
            <title>Gallery</title>
-           <link rel="icon" href="images/miLogo.jpg" type="image/jpg" sizes="20x20">
+           <link rel="icon" href="images/faviconLogo.jpg" type="image/jpg" sizes="20x20">
            <style>
             .mySlides {display:none;}
 
@@ -110,7 +110,7 @@
 
               <div class="mySlides">
                   <div class="slideText"><h5>Gymnasium at Terrace</h5></div>
-                  <img src="images/actual-gym.jpg" style="width:100%">
+                  <img src="images/gym.jpg" style="width:100%">
               </div>
 
           </div>
@@ -123,7 +123,7 @@
         <div class="row">   
 
             <div class="col-5 col-sm-5 col-md-6 align-self-center text-center">
-                <img id="mahaLogo" src="images/logoWithName.jpg" style="width:140px; height:170px">
+                <img id="mahaLogo" src="images/mahaLogo.jpg" style="width:140px; height:170px">
             </div>
             
             <div class="col-7 col-sm-7 col-md-6 align-self-center">
