--- a/index.html
+++ b/index.html
@@ -13,17 +13,11 @@
     	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
     	<link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     	<title>Sai Marina</title>
-        <link rel="icon" href="images/miLogo.jpg" type="image/jpg" sizes="20x20">
+        <link rel="icon" href="images/faviconLogo.jpg" type="image/jpg" sizes="20x20">
 
         <style type="text/css">
           #para {
              padding-top: 20px;
-         }
-
-         #mahaLogo{
-               display: flex;
-                justify-content: center;
-                align-items: center;
          }
 
      </style>
@@ -114,12 +108,11 @@
 </div>
 <br>
 
-<footer class="footer">
+   <footer class="footer">
     <div class="container">
         <div class="row">   
-
             <div class="col-5 col-sm-5 col-md-6 align-self-center text-center">
-                <img id="mahaLogo" src="images/logoWithName.jpg" style="width:140px; height:170px">
+                <img id="mahaLogo" src="images/mahaLogo.jpg" style="width:140px; height:170px">
             </div>
             
             <div class="col-7 col-sm-7 col-md-6 align-self-center">
