--- a/rera.html
+++ b/rera.html
@@ -12,7 +12,7 @@
     	<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     	<link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     	<title>Sai Marina RERA</title>
-        <link rel="icon" href="images/miLogo.jpg" type="image/jpg" sizes="20x20">
+        <link rel="icon" href="images/faviconLogo.jpg" type="image/jpg" sizes="20x20">
     	
     </head>
 
@@ -46,12 +46,12 @@
                 <h3  class="col-12 col-sm-12 col-md-12 col-lg-12">Sai Marina RERA Number</h3><hr>
                 <div class="container">
                     <p>Sai Marina has been registered via <b>MahaRERA registration number: P51700017788</b> and is available on the website 
-                        <a href="https://maharera.mahaonline.gov.in"> https://maharera.mahaonline.gov.in </a> under registered projects.<br></p>
+                        <a target="_blank" href="https://maharera.mahaonline.gov.in"> https://maharera.mahaonline.gov.in/ </a> under registered projects.<br></p>
                         <p>
                         The MahaRERA Registration Number is a mark of integrity. It is an iconic act that aims to bring transparency and efficiency in the real estate sector, protect consumers, and fast track dispute resolution. It is an act that promotes good governance in the market, which helps customers get more information about projects and reduces the risk associated with the purchase. 
                      </p>
 
-                     <p><b>Address: </b> Block No. C-606/607, Sai Vasanshah Bungalow Area, Netaji Chowk, ULHASNAGAR 421004 </p>
+                     <p><b>Address: </b> Block No. C-606/607, Room No. 1212, 1213, 1214, Sai Vasanshah Bungalow Area, Netaji Chowk, ULHASNAGAR 421004 </p>
                  </div>
              </div>
          </div>
@@ -61,7 +61,7 @@
         <div class="row">   
 
             <div class="col-5 col-sm-5 col-md-6 align-self-center text-center">
-                <img id="mahaLogo" src="images/logoWithName.jpg" style="width:140px; height:170px">
+                <img id="mahaLogo" src="images/mahaLogo.jpg" style="width:140px; height:170px">
             </div>
             
             <div class="col-7 col-sm-7 col-md-6 align-self-center">
