--- a/amenities.html
+++ b/amenities.html
@@ -12,7 +12,7 @@
          <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
          <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
          <title>Amenities</title>
-         <link rel="icon" href="images/miLogo.jpg" type="image/jpg" sizes="20x20">
+         <link rel="icon" href="images/faviconLogo.jpg" type="image/jpg" sizes="20x20">
 
      </head>
 
@@ -111,7 +111,7 @@
         <div class="row">   
 
             <div class="col-5 col-sm-5 col-md-6 align-self-center text-center">
-                <img id="mahaLogo" src="images/logoWithName.jpg" style="width:140px; height:170px">
+                <img id="mahaLogo" src="images/mahaLogo.jpg" style="width:140px; height:170px">
             </div>
             
             <div class="col-7 col-sm-7 col-md-6 align-self-center">
