--- a/plan.html
+++ b/plan.html
@@ -12,7 +12,7 @@
            <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
            <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
            <title>Plan</title>
-           <link rel="icon" href="images/miLogo.jpg" type="image/jpg" sizes="20x20">
+           <link rel="icon" href="images/faviconLogo.jpg" type="image/jpg" sizes="20x20">
        </head>
        <style>
         .plan {
@@ -66,8 +66,8 @@
                  <div class="card border-secondary mb-3">
                     <div class="card-header"><b>Conceptual Floor Plan</b></div>
                     <div class="card-body align-self-center">
-                        <a target="_parent" href="images/plan/conceptual-floor-plan.jpg">
-                          <img class="plan" src="images/plan/conceptual-floor-plan.jpg" alt="Conceptual Floor Plan" style="width:225px; min-height: 175px">
+                        <a target="_parent" href="images/plan/conceptual-floor.jpg">
+                          <img class="plan" src="images/plan/conceptual-floor.jpg" alt="Conceptual Floor Plan" style="width:225px; min-height: 175px">
                       </a>
 
                   </div> 
@@ -78,8 +78,8 @@
              <div class="card border-secondary mb-3">
                 <div class="card-header"><b>1<sup>st</sup> to 6<sup>th</sup> Floor Plan</b></div>
                 <div class="card-body align-self-center">
-                    <a target="_parent" href="images/plan/floor-plan-measurements.jpg">
-                       <img class="plan" src="images/plan/floor-plan-measurements.jpg" alt="Floor Plan with Measurements" style="width:225px; min-height: 175px">
+                    <a target="_parent" href="images/plan/floor-measurements.jpg">
+                       <img class="plan" src="images/plan/floor-measurements.jpg" alt="Floor Plan with Measurements" style="width:225px; min-height: 175px">
                    </a>
 
                </div> 
@@ -90,8 +90,8 @@
          <div class="card border-secondary mb-3">
             <div class="card-header"><b>Terrace Conceptual Plan</b></div>
             <div class="card-body align-self-center">
-                <a target="_parent" href="images/plan/terrace-plan.jpg">
-                  <img class="plan" src="images/plan/terrace-plan.jpg" alt="Paris" style="width:225px; min-height: 175px">
+                <a target="_parent" href="images/plan/terrace.jpg">
+                  <img class="plan" src="images/plan/terrace.jpg" alt="Terrace Conceptual Plan" style="width:225px; min-height: 175px">
               </a>
 
           </div> 
@@ -116,7 +116,7 @@
         <div class="row">   
 
             <div class="col-5 col-sm-5 col-md-6 align-self-center text-center">
-                <img id="mahaLogo" src="images/logoWithName.jpg" style="width:140px; height:170px">
+                <img id="mahaLogo" src="images/mahaLogo.jpg" style="width:140px; height:170px">
             </div>
             
             <div class="col-7 col-sm-7 col-md-6 align-self-center">
@@ -134,8 +134,6 @@
                 </address>
             </div>
             <hr>
-
-
         </div>
     </div>
 </footer>
