Updated index header

--- a/gallery.html
+++ b/gallery.html
@@ -104,7 +104,7 @@
 
               <div class="mySlides">
                   <div class="slideText"><h5>Temple at Ground Floor</h5></div>
-                  <img src="images/temple.jpg" style="width:100%">
+                  <img src="images/temple-img.jpg" style="width:100%">
 
               </div>
 
