--- a/amenities.html
+++ b/amenities.html
@@ -92,16 +92,31 @@
             <div class="card-header"><b>Enriched with three 'S' </b></div>
             <div class="card-body">
                 <ul>
-                    <li><i>Safety - </i>Fire fighting system on all floors </li>
-                    <li><i>Saving - </i>Rain water harvesting system</li>
-                    <li><i>Security - </i>CCTV Surveillance for entire project</li>
+                    <li>Earthquake resistance RCC structure</li>
+                    <li>Leakage proof RCC slabs</li>
+                    <li>Damp proof walls</li>
+                    <li>Seepage proof plastering</li>
+                    <li>Weather protective external painting</li>
                 </ul>
             </div> 
 
         </div>
     </div>
     <br>
+    <div class="col-auto">
+        <div class="card border-secondary mb-3">
+         <div class="card-header"><b>Stability Features </b></div>
+         <div class="card-body">
+             <ul>
+                 <li><i>Safety - </i>Fire fighting system on all floors </li>
+                 <li><i>Saving - </i>Rain water harvesting system</li>
+                 <li><i>Security - </i>CCTV Surveillance for entire project</li>
+             </ul>
+         </div> 
 
+     </div>
+ </div>
+<br>
 
 </div>
 </div>
@@ -124,8 +139,8 @@
                     Netaji Chowk<br>
                     ULHASNAGAR 421004<br>
                     <span class="fa fa-phone fa-lg"></span>  : <a href="tel:+919860399130"> +919860399130</a><br>
-                    <span class="fa fa-phone fa-lg"></span>  : <a href="tel:+919860399130"> +917021361408</a><br>
-                    <span class="fa fa-envelope fa-lg"></span> : <a href="mailto:mahalaxmiinfrastructure@gmail.com">Inbox us</a>
+                    <span class="fa fa-phone fa-lg"></span>  : <a href="tel:+919890661000"> +919890661000</a><br>
+                    <span class="fa fa-envelope fa-lg"></span> : <a href="mailto:mahalaxminfrastructure@gmail.com">Inbox us</a>
                 </address>
             </div>
             <hr>
