--- a/contactus.html
+++ b/contactus.html
@@ -56,47 +56,12 @@
            </div>
            <div class="col-12">
            </div>
+           <br><br>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4" id="plans">
                  <div class="card border-secondary mb-3">
                     <div class="card-header"><b>Deepak Jeshnani</b></div>
                     <div class="card-body align-self-center">
                         <span class="fa fa-phone fa-lg"></span> : <a href="tel:+919860399130">  +919860399130</a><br>
-                  </div> 
-              </div>
-          </div>
-		  <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-		  </div>
-		  <div class="col-12 col-sm-12 col-md-4 col-lg-4" id="plans">
-                 <div class="card border-secondary mb-3">
-                    <div class="card-header"><b>Kamlesh Jeshnani</b></div>
-                    <div class="card-body align-self-center">
-                        <span class="fa fa-phone fa-lg"></span> : <a href="tel:+919860755608">  +919860755608</a><br>
-                  </div> 
-              </div>
-          </div>
-		  <div class="col-12 col-sm-12 col-md-4 col-lg-4" id="plans">
-                 <div class="card border-secondary mb-3">
-                    <div class="card-header"><b>Sonu Jeshnani</b></div>
-                    <div class="card-body align-self-center">
-                        <span class="fa fa-phone fa-lg"></span> : <a href="tel:+919890089961">  +919890089961</a><br>
-                  </div> 
-              </div>
-          </div>
-		  <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-		  </div>
-		  <div class="col-12 col-sm-12 col-md-4 col-lg-4" id="plans">
-                 <div class="card border-secondary mb-3">
-                    <div class="card-header"><b>Amit Sachdev</b></div>
-                    <div class="card-body align-self-center">
-                        <span class="fa fa-phone fa-lg"></span> : <a href="tel:+917021361408">  +917021361408</a><br>
-                  </div> 
-              </div>
-          </div>
-		  <div class="col-12 col-sm-12 col-md-4 col-lg-4" id="plans">
-                 <div class="card border-secondary mb-3">
-                    <div class="card-header"><b>Amar Jagiasi</b></div>
-                    <div class="card-body align-self-center">
-                        <span class="fa fa-phone fa-lg"></span> : <a href="tel:+917972873938">  +917972873938</a><br>
                   </div> 
               </div>
           </div>
@@ -110,30 +75,11 @@
                   </div> 
               </div>
           </div>
-		  <div class="col-12 col-sm-12 col-md-4 col-lg-4" id="plans">
-                 <div class="card border-secondary mb-3">
-                    <div class="card-header"><b>Jaikishan Jeshnani</b></div>
-                    <div class="card-body align-self-center">
-                        <span class="fa fa-phone fa-lg"></span> : <a href="tel:+917588721420">  +917588721420</a><br>
-                  </div> 
-              </div>
-          </div>
-		  <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-		  </div>
-		  <div class="col-12 col-sm-12 col-md-4 col-lg-4" id="plans">
-                 <div class="card border-secondary mb-3">
-                    <div class="card-header"><b>Vishal Jeshnani</b></div>
-                    <div class="card-body align-self-center">
-                        <span class="fa fa-phone fa-lg"></span> : <a href="tel:+918788005211">  +918788005211</a><br>
-                  </div> 
-              </div>
-          </div>
              <div class="col-12 col-md">
             </div>
        </div>
-
     </div>
-
+    <br><br><br>
    <footer class="footer">
     <div class="container">
         <div class="row">   
@@ -152,8 +98,8 @@
                     Netaji Chowk<br>
                     ULHASNAGAR 421004<br>
                     <span class="fa fa-phone fa-lg"></span>  : <a href="tel:+919860399130"> +919860399130</a><br>
-                    <span class="fa fa-phone fa-lg"></span>  : <a href="tel:+919860399130"> +917021361408</a><br>
-                    <span class="fa fa-envelope fa-lg"></span> : <a href="mailto:mahalaxmiinfrastructure@gmail.com">Inbox us</a>
+                    <span class="fa fa-phone fa-lg"></span>  : <a href="tel:+919890661000"> +919890661000</a><br>
+                    <span class="fa fa-envelope fa-lg"></span> : <a href="mailto:mahalaxminfrastructure@gmail.com">Inbox us</a>
                 </address>
             </div>
             <hr>
