--- a/index.html
+++ b/index.html
@@ -95,12 +95,13 @@
 
      <div class="col-12 col-sm-12 col-md-6 col-lg-6 align-self-center" id="para">
 
-       <h3>Live Holistic Life</h3>
+       <h3>A SLICE OF GOOD LIFE</h3>
        <hr>
        <p>
-          The project offers luxurious indulgences, exceptional amenities and state of the art surveillance system for utmost safety and peace of mind. 
-          <p>It allows you a space where you can break away from the constraints of life and enjoy a home that nurtures imagination and creativity. </p>
-          <p>Residences are designed for excellent ventillation and maximum access to natural sunlight. In addition, three spacious residences on each floor along with two elevators assure a holistic living experience. </p> 				
+        Welcome to Sai Marina - A world of excess, indulgence and extravagance never before seen in the history of Ulhasnagar. 
+        <p>Located in the heart of Ulhasnagar’s upscale bungalow area, Sai Marina is the pinnacle of luxury - palatial residential apartments with spectacular amenities and state of the art surveillance system for utmost safety, peace and tranquility. </p>
+          <p>The project offers residences designed for excellent ventilation and maximum access to natural sunlight. In addition, three spacious residences on each floor along with two elevators assure a holistic living experience. </p>
+          <p>A tower with a slice of exclusivity, waiting to be owned by a select few! </p> 				
       </p>
 
   </div>
@@ -126,8 +127,8 @@
                     Netaji Chowk<br>
                     ULHASNAGAR 421004<br>
                     <span class="fa fa-phone fa-lg"></span>  : <a href="tel:+919860399130"> +919860399130</a><br>
-                    <span class="fa fa-phone fa-lg"></span>  : <a href="tel:+919860399130"> +917021361408</a><br>
-                    <span class="fa fa-envelope fa-lg"></span> : <a href="mailto:mahalaxmiinfrastructure@gmail.com">Inbox us</a>
+                    <span class="fa fa-phone fa-lg"></span>  : <a href="tel:+919890661000"> +919890661000</a><br>
+                    <span class="fa fa-envelope fa-lg"></span> : <a href="mailto:mahalaxminfrastructure@gmail.com">Inbox us</a>
                 </address>
             </div>
             <hr>
