--- a/locateus.html
+++ b/locateus.html
@@ -83,8 +83,8 @@
                     Netaji Chowk<br>
                     ULHASNAGAR 421004<br>
                     <span class="fa fa-phone fa-lg"></span>  : <a href="tel:+919860399130"> +919860399130</a><br>
-                    <span class="fa fa-phone fa-lg"></span>  : <a href="tel:+919860399130"> +917021361408</a><br>
-                    <span class="fa fa-envelope fa-lg"></span> : <a href="mailto:mahalaxmiinfrastructure@gmail.com">Inbox us</a>
+                    <span class="fa fa-phone fa-lg"></span>  : <a href="tel:+919890661000"> +919890661000</a><br>
+                    <span class="fa fa-envelope fa-lg"></span> : <a href="mailto:mahalaxminfrastructure@gmail.com">Inbox us</a>
                 </address>
             </div>
             <hr>
