--- a/contactus.html
+++ b/contactus.html
@@ -51,8 +51,8 @@
 
         <div class="row row-content">
            <div class="col-12">
-              <center><h3>CONTACT US</h3>
-              <h4>We are ready to provide you the slice of good life!</h4></center>
+              <center><h3>CONTACT US</h3></center><br>
+              <center><h4>We are ready to provide you a perfect way of living holistic life!</h4></center>
            </div>
            <div class="col-12">
            </div>
