--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
      <div class="col-12 col-sm-12 col-md-6 col-lg-6 align-self-center" id="para">
 
-       <h3>A SLICE OF GOOD LIFE</h3>
+       <h3>A Slice of Good Life</h3>
        <hr>
        <p>
         Welcome to Sai Marina - A world of excess, indulgence and extravagance never before seen in the history of Ulhasnagar. 
