--- a/contactus.html
+++ b/contactus.html
@@ -37,9 +37,9 @@
                         <li class="nav-item"><a class="nav-link" href="./amenities.html"><span class="fa fa-list"></span> Amenities</a></li>
                         <li class="nav-item"><a class="nav-link" href="./plan.html"><span class="fa fa-building"></span> Plan</a></li>
                         <li class="nav-item" ><a class="nav-link" href="./gallery.html"><span class="fa fa-image"></span> Gallery</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card"></span> Contact</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-address-card"></span> Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="./locateus.html"><span class="fa fa-map-marker"></span> Location</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-legal"></span> Sai Marina RERA</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./rera.html"><span class="fa fa-legal"></span> Sai Marina RERA</a></li>
 
                     </ul>
                 </div>
@@ -51,13 +51,12 @@
 
         <div class="row row-content">
            <div class="col-12">
-              <center><h3>CONTACT US</h3></center><br>
-              <center><h4>We are ready to provide you a perfect way of living holistic life!</h4></center>
+              <center><h3>Contact us</h3></center><hr>
            </div>
            <div class="col-12">
            </div>
-           <br><br>
-            <div class="col-12 col-sm-12 col-md-4 col-lg-4" id="plans">
+           
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 align-self-center">
                  <div class="card border-secondary mb-3">
                     <div class="card-header"><b>Deepak Jeshnani</b></div>
                     <div class="card-body align-self-center">
@@ -65,7 +64,7 @@
                   </div> 
               </div>
           </div>
-		  <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+		  <div class="col-12 col-sm-12 col-md-4 col-lg-4 align-self-center">
 		  </div>
 		  <div class="col-12 col-sm-12 col-md-4 col-lg-4" id="plans">
                  <div class="card border-secondary mb-3">
@@ -79,7 +78,7 @@
             </div>
        </div>
     </div>
-    <br><br><br>
+    <br>
    <footer class="footer">
     <div class="container">
         <div class="row">   
