--- a/locateus.html
+++ b/locateus.html
@@ -15,7 +15,6 @@
            <link rel="icon" href="images/faviconLogo.jpg" type="image/jpg" sizes="20x20">
            <style>
                #map{
-
                 position: relative;
                 overflow: hidden;
             }
@@ -23,7 +22,7 @@
             .resp-iframe {
                 position: relative;
                 width: 100%;
-                height: 110%;
+                min-height: 210px;
                 border: 0;
             }
         </style>
